# clevert

./: .gitignore  Cargo.toml  LICENSE  README.md  a.mjs  a.ps1  c.mjs  clevert.js  demo.html  electron.js  index.js  main.bak.js  main.bakold.js  main.js  market.js  package-lock.json  package.json
.cargo/: config
.github/workflows/: CI.yml  asset_busybox.yml  asset_drawstamputils.yml  asset_ect.yml  asset_ffmpeg.yml  asset_jpegxl.yml  asset_mp4box.yml  asset_ngmddocs.yml  asset_rsync.yml  asset_webp.yml  asset_zcodecs.yml  ci.yml  make.jpegxl.yml  make.mp4box.yml  make.rsync.yml  make.webp.yml  rust.yml
extensions/aria2/: index.js
extensions/ffmpeg/: index.js  main.js  test-ffmpeg.js
extensions/imagemagick/: index.js
extensions/jpegxl/: index.js  main.js  main.tsx
extensions/marker/: index.js
extensions/python/: index.js
extensions/waifu2x/: index.js
extensions/yt-dlp/: index.js
extensions/zcodecs/: index.js
installer/: windows.iss
src/: action.rs  child.rs  child_kit.rs  child_utils.rs  config.rs  cui.rs  extension-ffmpeg.js  gui.html  gui.rs  interactive.rs  lib.rs  log.rs  main.js  main.rs  main.tsx  order_next.rs  order_types.rs  task_types.rs  tests.rs  toml_helper.rs  toml_seek.rs  tui.rs  ui.rs  utils.rs
src/child/: mod.rs
src/child/sys/: unix.rs  windows.rs
src/interactive/: mod.rs
tests/: common.rs
