[package]
name = "clevert"
description = "Extensible file converter."
version = "0.8.1"
edition = "2021"
license = "MIT"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
num_cpus = "1.13.1"
serde = { version = "1.0.136", features = ["derive"] }
shared_child = "1.0.0"
toml = "0.5.8"
yansi = "0.5.1"
tiny_http = "0.11.0"
# vc-ltl = "5.0.4"
