[package]
name = "clevert"
description = "Extensible file converter."
version = "0.9.1"
edition = "2021"
license = "MIT"

[profile.dev]
debug = false
strip = true

[profile.dev.package."*"]
debug = false
strip = true
opt-level = "z"

[profile.release]
strip = true
lto = "fat"
panic = "abort"

[dependencies]
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
shared_child = "1"
toml = "0.5"
yansi = "0.5"
terminal_size = "0.1"

# vc-ltl = "5.0.5"
