[package]
name = "clevert"
description = "Extensible file converter."
version = "0.9.2"
edition = "2021"
license = "MIT"

[profile.dev.package."*"]
debug = false
strip = true
opt-level = "z"

[profile.release]
strip = true
lto = "fat"
panic = "abort"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5"
shared_child = "1"
num_cpus = "1"
yansi = "0.5"
terminal_size = "0.1"
toml_edit = "0.18.0"
# vc-ltl = "5.0.5"
